# klondike-ai

./: .gitignore  .gitmodules  Cargo.toml  FIX_REPORT.md  README.md  audit_solve_klondike.py  bootstrap.py  check_dataset.py  check_klondike_system.py  check_system_ready.py  compiled_rust.txt  config.yaml  dagger_dataset.py  dataset_stats.py  debug_move_index.py  debug_pipeline.py  evaluate_model.py  generate_expert_dataset.py  intention_utils.py  klondike_audit_core.py  klondike_core.py  klondike_core.pyi  pyproject.toml  requirements.txt  rust_list.txt  self_play_generate.py  setup.py  solve_example.py  stub_tracker.md  test_bindings.py  test_end_to_end.py  test_gameplay.txt  test_solve_from_new_game.py  test_state_analysis.py
ai/: Cargo.toml  generate_expert_data.py  klondike_ai.py  requirements.txt  train.py
ai/src/: coach.rs  lib.rs  mcts.rs  network.rs  train.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  README_core.md  pyproject.toml  validate_dataset.py
core/src/: card.rs  convert.rs  engine.rs  intentions.rs  legacy.rs  lib.rs  mcts_solver.rs  moves.rs  pruning.rs  reward.rs  state.rs
core/tests/: playthrough.rs  solver.rs  test_state.rs
docs/: expert_dataset.md
env/: __init__.py  is_critical_move.py  klondike_env.py  reward.py  state_utils.py
klondike_core/: Cargo.toml
klondike_core/src/: lib.rs
logs/episodes/: episode_42.csv  episode_43.csv
lonecli/: Cargo.toml  README.md
lonecli/examples/: state.json
lonecli/src/: main.rs  solver.rs  solvitaire.rs  tracking.rs  training.rs  tui.rs
notebooks/: explore_dataset.ipynb  intention_analysis.ipynb  intention_clustering.ipynb
python/: README.md  main.py
python/lonelybot_py/: Cargo.toml
replays/: replay_episode_42.html
results/: train_log.csv
src/: card.rs  lib.rs  pruning.rs  state.rs
test/: test_is_critical_move.py  test_json_integrity.py  test_reward.py
tests/: test_audit_move_index_warning.py  test_bindings.py  test_dataset_stats.py  test_end_to_end.py  test_intention.py  test_intention_utils.py  test_is_critical_move.py  test_json_integrity.py  test_klondike_core_bindings.py  test_move_index.py  test_new_game_chain.py  test_observation.py  test_reward.py  test_shuffle_seed.py  test_solve_klondike.py  test_state_analysis.py  test_training_pipelines.py
tools/: intention_clustering.py  replay.py  replay_viewer.py
train/: analyze_training.py  evaluate_dqn.py  imitation_learning.py  intention_embedding.py  optimize_dqn.py  plot_results.py  train_dqn.py  train_supervised.py
utils/: config.py  training.py
