[package]
name = "lonelybot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand.workspace = true
rand_mt.workspace = true
arrayvec.workspace = true
hashbrown.workspace = true
static_assertions.workspace = true
uint.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "solve_seeded"
path = "bin/solve_seeded.rs"

[workspace]
members = ["ai", "lonecli", "klondike_core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Klondike AI Team"]

[workspace.dependencies]
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
rand_mt = "5.0"
arrayvec = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.15", default-features = false }
static_assertions = "1.1.0"
uint = { version = "0.10", default-features = false }
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
torch = "0.1"
tqdm = "0.6"
colored = "3.0.0"
signal-hook = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maturin = "1.9"
