[package]
name = "klondike_ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "klondike_ai"
crate-type = ["cdylib", "rlib"]

[dependencies]
klondike_core = { path = "../core" }
pyo3.workspace = true
numpy.workspace = true
torch.workspace = true
tqdm.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

[tool.maturin]
module-name = "klondike_ai"
