[package]
name = "klondike-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rand.workspace = true
rand_mt.workspace = true
arrayvec.workspace = true
hashbrown.workspace = true
static_assertions.workspace = true
uint.workspace = true
pyo3.workspace = true
serde.workspace = true
