[package]
name = "klondike_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rand.workspace = true
rand_mt.workspace = true
arrayvec.workspace = true
hashbrown.workspace = true
static_assertions.workspace = true
uint.workspace = true
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "klondike_core"
crate-type = ["cdylib"]

[tool.maturin]
module-name = "klondike_core"
