[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "klondike_core"
version = "0.1.0"
description = "Klondike game engine bindings"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
bindings = "pyo3"
module-name = "klondike_core"
