[package]
name = "klondike_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "klondike_core"
crate-type = ["cdylib"]

[dependencies]
lonelybot = { path = ".." }
pyo3 = { version = "=0.20.2", features = ["extension-module"] }
serde_json = "1"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
