[[bin]]
name = "lonecli"
path = "src/main.rs"

[package]
name = "lonecli"
version = "0.2.3"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
colored = "3.0.0"
bpci = "0.1.0"
signal-hook = "0.3.17"
serde_json = "1.0.117"

[dev-dependencies]

[dependencies.clap]
version = "4.5.3"
features = [ "std", "derive",]

[dependencies.rand]
version = "0.9"
default-features = false
features = [ "small_rng",]

[dependencies.lonelybot]
path = ".."
